# self-healing-mlops

./: .coverage  .dockerignore  .editorconfig  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CI_CD_GUIDE.md  DATABASE_INTEGRATION_STATUS.md  DATABASE_SETUP.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.airflow  FINAL_DELIVERY_CHECKLIST.md  GITHUB_ACTIONS_GUIDE.md  LICENSE  MAKEFILE_REMOVAL_SUMMARY.md  MIGRATION_COMPLETE.md  Makefile.backup  NO_MAKEFILE_GUIDE.md  PHASE_6_COMPLETE.md  PHASE_6_IMPLEMENTATION.md  PHASE_6_PART2_CHECKLIST.md  PHASE_6_PART2_IMPLEMENTATION.md  PHASE_6_SUMMARY.md  PRE-PUSH-VALIDATION.md  QUICK_START_NO_MAKEFILE.md  README.md  VERIFICATION_CHECKLIST.md  check_db.py  check_tables.py  coverage.xml  docker-compose.yml  extraREADME.md  integration_test_output.txt  make  mypy.ini  pyproject.toml  (+5 more)
.github/workflows/: ci-cd.yml
airflow/dags/: airflow.cfg  retraining_pipeline.py
docs/: TECHSTACK.md  api.md  architecture.md  database.md  evaluation_gates.md  phase2-details.md  runbook.md  troubleshooting.md
monitoring/predictions/: predictions.bak  predictions.csv
monitoring/reference/: reference_data.csv  reference_metadata.json
scripts/: bootstrap_reference.py  generate_fake_predictions.py  generate_test_predictions.sh  health_check.sh  inject_drift.sh  inspect_label_alignment.py  migrate_to_corrected_schema.sh  prepare_temporal_data.py  run_retraining_workflow.py  simulate_traffic.py  verify_setup.sh
scripts/db/: create_database.py  init_database.py  schema.sql
scripts/phase5/: demo_01_baseline.py  demo_02_covariate_shift.py  demo_03_population_shift.py  demo_04_manual_trigger.py  demo_05_rollback.py  run_full_demo.sh
src/: api.py  api_mlflow.py  data.py  predict.py  preprocessing.py  test_predict.py  train.py  train_model_mlflow.py
src/analytics/: drift_detection.py  drift_signals.py  model_evaluator.py  (+1 more)
tests/: __init__.py  conftest.py
(+65 files in other folders)
